bug fixed: navbar collapse button not working when shrinking viewport, and minor improvement on pop up modal

--- a/public/css/managePlayers.css
+++ b/public/css/managePlayers.css
@@ -32,7 +32,7 @@ ul li a{
     max-width: 250px;
 }
 #bot-btn{
-    margin-bottom: 5px;
+    margin-bottom: 25px;
 }
 
 .caption{
